# MSsql-DB-Compare

./: Cargo.toml  LICENSE  README.md
src/: main.rs
